name:                tidal-vis
version:             1.0.15
synopsis:            Visual rendering for Tidal patterns and osc messages
homepage:            http://yaxu.org/tidal/
license:             GPL-3
license-file:        LICENSE
author:              Alex McLean
maintainer:          alex@slab.org
Stability:           Experimental
Copyright:           (c) Alex McLean and others, 2019
category:            Sound
build-type:          Simple
cabal-version:       2.0

--Extra-source-files: README.md tidal.el doc/tidal.md doc/tidal.pdf

Description: Tidal is a domain specific language for live coding pattern. This package allows colour patterns to be rendered as PDF or SVG files.

library
  Exposed-modules:  Common
                    Examples
                    Vis
                    VisCycle
                    VisGradient
                    VisPart

  hs-source-dirs:   src

  Build-depends:    base < 5
                  , async
                  , cairo
                  , colour
                  , containers
                  , hashable
                  , hosc
                  , mtl
                  , network
                  , tidal >= 1.0.15 && < 1.7
                  , time
                  , unagi-chan

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields

  default-language:   Haskell2010

  default-extensions:   OverloadedStrings
                        RecordWildCards
                        LambdaCase
